2006-08-18 [paul]	0.10.1cvs1

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-06-12 [paul]	0.10.1

	0.10.1 released

2006-06-06 [wwp]	0.10.0cvs2

	* configure.ac
	* src/Makefile.am
	* src/plugin_version.h.in
	* src/plugin.c
	* src/.cvsignore
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	0.10.0cvs1

	* commitHelper
	* PATCHSETS
	* configure.ac
		introducing commitHelper for plugins too.

2006-05-21 [colin] 	0.10

	* src/plugin.c
		Fix gcc-2.9x compile
		Patch by Pawel Pekala.

2006-05-17 [wwp] 0.9

	* src/plugin.c
		Updated sylpheed-claws product name.

2006-04-07 [colin] 	0.8

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2005-12-15 [paul]	0.7

	* Add plugin_version()

2005-12-07 [colin]      0.6

	* Add plugin_licence()
	
2004-11-25 [colin]

	Initial release