@@ -1,3 +1,4 @@
 ( diff -u /dev/null commitHelper;  diff -u /dev/null PATCHSETS;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 configure.ac;  ) > 0.10.0cvs1.patchset
 ( cvs diff -u -r 1.1.2.9 -r 1.1.2.10 configure.ac;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/Makefile.am;  cvs diff -u -r -1.1.2.1 -r -1.1.2.2 src/plugin_version.h.in;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/plugin.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/.cvsignore;  ) > 0.10.0cvs2.patchset
 ( cvs diff -u -r 1.1.2.11 -r 1.1.2.12 configure.ac;  ) > 0.10.1cvs1.patchset
+( cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/plugin.c;  ) > 0.10.1cvs2.patchset
